tests/paczka1/fuzzy1/35397352.err
Error in line 3: xbynHHD S832 61,4
Error in line 8: RDFRiN0td S689 10,2
Error in line 14: RDFRiN0td S576 40,4
Error in line 19: xbynHHD S576 80,0
Error in line 16: PshHSk7m S536 85,0
Error in line 26: AIk S689 77,6
